resolved improper spacing on testing.jsx

--- a/src/components/Testing.css
+++ b/src/components/Testing.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     justify-content: center;
     width: 100vw;
-    background-color: yellow;
+    /* background-color: yellow; */
 }
 
 .resultsList {
@@ -12,7 +12,7 @@ body {
     gap: 20px;
     justify-content: space-between;
     align-items: center;
-    background-color: orange;
+    /* background-color: orange; */
     width: 90vw;
 }
 
@@ -26,5 +26,5 @@ img {
 .specificCard {
     max-width: 200px;
     text-align: center;
-    background-color: pink;
+    /* background-color: pink; */
 }
